add new Input component

--- a/src/theme.css
+++ b/src/theme.css
@@ -3,6 +3,8 @@
     --success-color: #2cb67d;
     --primary-color: #3da9fc;
     --danger-color: #f45d48;
+    --input-color: #D3D3D3;
+    --placeholder-color: #A9A9A9;
 
     --font-size-small: .9rem;
     --font-size-medium: 1rem;
