--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,6 +1,6 @@
 .button {
     align-items: center;
-    border-radius: 10px;
+    border-radius: var(--border-radius);
     border: none;
     cursor: pointer;
     display: flex;
