--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -14,6 +14,10 @@
     width: 100%;
 }
 
+textarea.input__field {
+    resize: none;
+}
+
 .input__field::placeholder {
     color: var(--placeholder-color);
 }
