--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -21,3 +21,8 @@ textarea.input__field {
 .input__field::placeholder {
     color: var(--placeholder-color);
 }
+
+.input__field:focus {
+    outline: none;
+    outline-width: 0;
+}
